--- a/index.html
+++ b/index.html
@@ -687,18 +687,28 @@
         timeline.push(trial_procedure_random);
         timeline.push(end_screen);
 
-        jsPsych.init({
-            timeline: timeline,
-            show_preload_progress_bar: false,
-            use_webaudio: false,
-            exclusions: {
-                min_width: 800,
-                min_height: 600
-            },
-            on_finish: function() {
-                uil.saveData(ACCESS_KEY, true);
-            }
-        })
+        //
+        // Start jsPsych when running on a Desktop or Laptop style pc.
+        if (! uil.isMobileOrTablet()) {
+            jsPsych.init(
+                {
+                    timeline: timeline,
+                    exclusions: {
+                        min_width: MIN_WIDTH,
+                        min_height: MIN_HEIGHT
+                    },
+                    on_finish: function() {
+                        // the 'true' parameter is needed only for the acc. server
+                        uil.saveData(ACCESS_KEY, true);
+                    }
+                }
+            )
+        }
+        else { // or bail out.
+            let paragraph = document.createElement("p")
+            paragraph.innerHTML = "Please run this experiment on a pc or laptop.";
+            document.body.appendChild(paragraph);
+        }
     })
     </script>
 </html>
